fixed text placeholder to text align center

--- a/styles.css
+++ b/styles.css
@@ -529,6 +529,9 @@ input:focus {
     display: flex;
     flex-direction: column;
   }
+  .email input::placeholder {
+    text-align: center;
+  }
 }
 
 /* Footer */
